# C-Snake

./: CMakeLists.txt  README.md
SnakeCMake/: CMakeLists.txt
SnakeCMake/src/: globals.h  input.c  input.h  main.c  screen.c  screen.h  state.c  state.h
